syntax = "proto3";

package calculator;

service CalculatorService {
    // rpc throw an exception if sent number is -1
    rpc SquareRoot (SquareRootRequest) returns (SquareRootResponse) {};
}

message SquareRootRequest {
    int32 number = 1;
}

message SquareRootResponse {
    double number_root = 1;
}
